# aoc-2024

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
